Fix login bar alignment issues (Snow)
Stuff sometimes jumped down to next line in Chrome.

--- a/qa-theme/Snow/qa-styles.css
+++ b/qa-theme/Snow/qa-styles.css
@@ -313,7 +313,7 @@ input[type="submit"].qa-search-button:hover {
 	font-size: 12px;
 	color: #000;
 	white-space: nowrap;
-	margin: 5px 0 4px 0;
+	margin: 1px 0 4px 0;
 }
 
 * html .qa-nav-user {
@@ -321,21 +321,18 @@ input[type="submit"].qa-search-button:hover {
 }
 
 .qa-logged-in {
+	display: inline-block;
 	margin-right: 1px;
-	float: left;
-	display: block;
 }
 
-/* added for 1.2 */
 .qa-logged-in-avatar {
-	float: left;
-	margin: -3px 5px 0 0;
+	display: inline-block;
+	margin: 0 5px 0 0;
 	width: 24px;
 }
 
-/* end */
 .qa-logged-in-points {
-	float: left;
+	display: inline-block;
 	margin-left: 2px;
 	margin-right: 5px;
 }
@@ -349,8 +346,7 @@ input[type="submit"].qa-search-button:hover {
 }
 
 .qa-nav-user-item {
-	float: left;
-	display: block;
+	display: inline;
 	margin: 0;
 	padding: 0 5px;
 	font-weight: 400;
@@ -375,9 +371,6 @@ input[type="submit"].qa-search-button:hover {
 	line-height: 26px;
 }
 
-.fb_iframe_widget span {
-	margin-top: -3px;
-}
 /*---[ End: login bar css ]---*/
 
 /*---[ Begin: notice bar css ]---*/
